--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,67 @@
-/* Top Nav Styles */
-nav {
+
+#main-navbar {
   background-color: blue;
   overflow: hidden;
+}
+
+#navbar-container {
+  float: left;
   width: 100%;
   position: relative;
 }
 
-nav ul {
+#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   position: relative;
   left: 50%;
   float: left;
-  right: 50%;
 }
 
-nav li {
+#main-navbar ul li {
   float: left;
+  position: relative;
+  right: 50%;
   display: block;
 }
 
-nav a {
+#main-navbar ul li a {
   display: block;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
+}
+
+#main-navbar ul li a:hover {
   background-color: #000;
 }
 
-/* Sidebar Styles */
-aside {
+#onpage {
+  text-decoration: underline overline;
+}
+
+#sidebar {
   position: fixed;
-  right: 0%;
+  right:0%;
   background-color: red;
   height: 100%;
   width: 20%;
+}
+
+#sidebar ul {
   list-style-type: none;
   text-align: center;
   padding: 0;
 }
 
-aside li {
+#sidebar ul li a {
   display: block;
   padding: 15px 0;
-}
-
-aside a {
   color: #fff;
   text-decoration: none;
+}
+
+#sidebar ul li a:hover {
   background-color: #000;
 }
